Update print statement to say 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.31/jspdf.plugin.autotable.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  
+  <!-- PWA Meta Tags -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="Supervila DRE">
+<meta name="mobile-web-app-capable" content="yes">
+<link rel="apple-touch-icon" href="assets/icon-192x192.png">
+<link rel="apple-touch-startup-image" href="assets/icon-512x512.png">
+
   <link rel="stylesheet" href="style.css">
   <link rel="manifest" href="manifest.json">
+
 
 </head>
 
