--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <meta name="apple-mobile-web-app-title" content="Supervila DRE">
   <meta name="mobile-web-app-capable" content="yes">
   
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  
   <!-- ARQUIVOS LOCAIS - Use caminhos relativos SEM a barra inicial -->
   <link rel="stylesheet" href="style.css">
   <link rel="manifest" href="manifest.json">
@@ -721,5 +723,6 @@
   </div>
 
   <script src="script.js"></script>
+
 </body>
 </html>
